# subt_arti_searching

./: .gitignore  README.md  docker_tutorial.md  download_in_docker.sh  setup_nano_env.sh  start_docker_image.sh
BB_for_pointnet/: InstanceSeg_net.py  cls_prediction.py  dataset.py  origin.pcd  out.pcd  prediction.py  train_bb_pointnet.py  train_bb_pointnet_cls.py  train_bb_pointnet_seg.py
BB_for_pointnet/score/: cls_acc.txt
BB_for_pointnet/score/3_cls_classify_1/: cls_acc.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/bb_pointnet/: bb_input.h
catkin_ws/devel/lib/pkgconfig/: bb_pointnet.pc
catkin_ws/src/bb_pointnet/: CMakeLists.txt
catkin_ws/src/main_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/pcl_exercise/: CMakeLists.txt
catkin_ws/src/pcl_exercise/launch/: normal.launch
catkin_ws/src/pcl_exercise/src/: depth_to_point.cpp  depth_to_point.h  mask_to_point.h  normal.cpp  normal.h
catkin_ws/src/pcl_exercise/srv/: norm.srv
catkin_ws/src/ssd_training/: CMakeLists.txt  package.xml
data/subt/: copy.py  generate_txt.py  seperate_txt.py
data/subt/Annotations/: backpack000000.xml  backpack000001.xml  backpack000002.xml  backpack000003.xml  backpack000004.xml  backpack000005.xml  backpack000006.xml  backpack000007.xml  backpack000008.xml  backpack000009.xml  backpack000010.xml  backpack000011.xml  backpack000012.xml  backpack000013.xml  backpack000014.xml  backpack000015.xml  backpack000016.xml  backpack000017.xml  backpack000018.xml  backpack000019.xml  backpack000020.xml  backpack000021.xml  backpack000022.xml  backpack000024.xml  backpack000025.xml  backpack000026.xml  backpack000027.xml  backpack000028.xml  backpack000029.xml  backpack000030.xml  backpack000031.xml  backpack000032.xml  backpack000033.xml  backpack000034.xml  backpack000035.xml  backpack000036.xml  backpack000037.xml  backpack000038.xml  backpack000039.xml  backpack000040.xml  (+3558 more)
data/subt/ImageSets/Main/: all.txt  (+2 more)
instance/: InstanceSeg_net.py  dataset.py  prediction.py  train_pointnet.py
instance/.ipynb_checkpoints/: barcode_22-checkpoint.ipynb  prediction-checkpoint.ipynb
ssd/: ssd.py  train_barcode.py  train_subt.py
ssd/data/: __init__.py  config.py  subt.py
ssd/demo/: subt_demo.ipynb
ssd/demo/.ipynb_checkpoints/: demo-checkpoint.ipynb  subt_demo-checkpoint.ipynb
(+25 files in other folders)
